adds faucet instructions

--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -48,6 +48,10 @@ $ ark receive
 
 This command also shows the list of relays used to reach the ASP.
 
+### Faucet your wallet
+
+Go to https://faucet.arkdev.info and use the `offchain_address` from the previous command to faucet your wallet with some sats.
+
 ### Print balance
 
 You can see both the onchain and offchain balance of the wallet with:
